syntax = "proto3";

package helloworld;


service Greeter {
 
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc Getuser (userRequest)returns (userReply){}
  
}
message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
message userRequest {
  int32 id = 1;
}

message userReply{
  string name  = 1;
  string email = 2;
  string phone = 3;

}
